--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             body {
                 padding: 0px;
                 margin: 0px;
+                overflow: hidden;
             }
         </style>
     </head>
